# litchee

./: .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PKCE_GUIDE.md  README.md  cliff.toml  clippy.toml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml  todo.md
.claude/: settings.json
.claude/commands/: dependabot-triage.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  live.yml
examples/: oauth_flow.rs  profile.rs  tv_feed.rs
src/: lib.rs
src/api/: mod.rs
src/api/auth/: mod.rs
src/api/auth/oauth/: mod.rs  pkce.rs  scope.rs  token.rs
src/api/broadcasting/: broadcasts.rs  mod.rs  tv.rs
src/api/broadcasting/broadcasts/: manage.rs  mod.rs  model.rs
src/api/broadcasting/tv/: mod.rs  model.rs
src/api/database/: analysis.rs  mod.rs  opening_explorer.rs  tablebase.rs
src/api/database/analysis/: mod.rs  model.rs
src/api/database/opening_explorer/: mod.rs  model.rs
src/api/database/tablebase/: mod.rs  model.rs
src/api/engine/: external_engine.rs  mod.rs
src/api/engine/external_engine/: mod.rs  model.rs
src/api/gameplay/: board.rs  bot.rs  bulk_pairing.rs  challenges.rs  games.rs  mod.rs
src/api/gameplay/board/: events.rs  mod.rs
src/api/gameplay/bot/: mod.rs
src/api/gameplay/bulk_pairing/: mod.rs  model.rs
src/api/gameplay/challenges/: create.rs  mod.rs  model.rs
src/api/gameplay/games/: export.rs  mod.rs  model.rs  stream.rs
src/api/social/: messaging.rs  mod.rs  relations.rs  teams.rs
src/api/social/teams/: mod.rs  model.rs
src/api/tournaments/: arena.rs  mod.rs  simuls.rs  swiss.rs
src/api/tournaments/arena/: mod.rs  model.rs
src/api/tournaments/simuls/: mod.rs  model.rs
src/api/tournaments/swiss/: mod.rs  model.rs
src/api/training/: mod.rs  puzzles.rs  studies.rs
src/api/training/puzzles/: mod.rs  model.rs
src/api/training/studies/: mod.rs  model.rs
src/api/users/: account.rs  fide.rs  mod.rs  players.rs
src/api/users/account/: mod.rs  model.rs
src/api/users/fide/: mod.rs  model.rs
src/api/users/players/: activity.rs  mod.rs  model.rs  perf_stat.rs
src/client/: mod.rs
src/config/: mod.rs
src/error/: api.rs  mod.rs  oauth.rs  pkce.rs  stream.rs
src/http/: mod.rs
src/model/: common.rs  game_export.rs  mod.rs  perf.rs  pgn_export.rs  title.rs  user.rs
src/retry/: mod.rs
src/secret/: mod.rs
src/stream/: mod.rs
tests/: account.rs  analysis.rs  arena.rs  board.rs  bot.rs  broadcasts.rs  bulk_pairing.rs  challenges.rs  external_engine.rs  fide.rs  games.rs  live.rs  messaging.rs  oauth.rs  opening_explorer.rs  path_encoding.rs  path_segment_guard.rs  puzzles.rs  relations.rs  resilience.rs  retry.rs  simuls.rs  spec_examples.rs  studies.rs  swiss.rs  tablebase.rs  teams.rs  tv.rs  users.rs
tests/fixtures/: account_profile.json  game_export.json  puzzle_by_id.json  team_single.json  user_public.json
